syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message Categories {
    repeated Category categories = 1;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoryResponse {
    Category category = 1;
}

message ListCategoriesRequest {}


service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (Category) {}
    rpc ListCategories(ListCategoriesRequest) returns (Categories) {}
}